removed timeline.ass

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 /[Uu]ser[Ss]ettings/
 
 .idea/
+ProjectSettings/TimelineSettings.asset
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
